--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ tokio-stream = { version = "0.1.14", features = ["full"] }
 url = "2.4.1"
 serde_with = "3.4.0"
 chrono = { version = "0.4.31", features = ["serde"] }
+byteorder = "1.5"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["test-util"] }
