--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,8 @@ chrono = { version = "0.4.31", features = ["serde"] }
 base64 = "0.21.5"
 sha2 = "0.10"
 hex = "0.4.3"
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "websocket_performance"
+harness = false
