--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ url = "2.4.1"
 serde_with = "3.4.0"
 chrono = { version = "0.4.31", features = ["serde"] }
 byteorder = "1.5"
+log = "0.4"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["test-util"] }
@@ -33,6 +34,7 @@ base64 = "0.21.5"
 sha2 = "0.10"
 hex = "0.4.3"
 criterion = { version = "0.5", features = ["html_reports"] }
+env_logger = "0.11"
 
 [[bench]]
 name = "websocket_performance"
